--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "http://alekseiDeveloper1.github.io/tasks-manager",
+  "homepage": "https://alekseideveloper1.github.io/Svt-shop/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
